Make stand button only appear when necessary

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       <img src="images/Hitme.png" class="deck hidden" id="hit-me">
       <img src="images/Playagain.png" class="deck hidden" id="play-again">
       <img src="images/Wait.png" class="deck hidden" id="computer-turn">
-      <button id="stand" class="stand-btn">Stand</button>
+      <button id="stand" class="stand-btn hidden">Stand</button>
     </div>
   </section>
 
